# opcua-core

./: .travis.yml  Makefile.am  Makefile.in  README.md  configure  configure.ac  make_deb.sh
autom4te.cache/: traces.2
debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  manpage.1.ex
include/opc/common/: errors.h  node.h
include/opc/common/addons_core/: errors.h
include/opc/ua/: addressspace.h  computer.h  connection_listener.h  node.h  node_management.h  server.h  socket_channel.h  subscriptions.h  view.h
src/: node.cpp  socket_channel.cpp
src/common/: common_errors.cpp  node.cpp
src/common/addons_core/: addon_manager.cpp  config_file.cpp  errors_addon_manager.cpp
tests/: test_config_file.cpp
tests/common/: thread_test.cpp
